Tue May 15 14:43:24 2001  Matthew Fredette  <fredette@alum.mit.edu>

	* Release 0.2 out.
	* configure.in: Bumped up the version.
	* sunndd.8: Some formatting changes.
	* sunndd.c: Now have prototypes for the allocation functions.
	(main): Now handle boot blocks that aren't an integral
	multiple of the block size.

Wed May 09 20:50:46 2001  Matthew Fredette  <fredette@alum.mit.edu>

	* Makefile.am: Added support for the man page.
	* README: Updated the usage to reflect the new single-letter option names.
	* sunndd.8: Added.
	* sunndd.c (main): Now insert a small delay before sending each packet.
	Sending packets too quickly apparently overwhelms clients.
	Added new single-letter versions of all options that didn't
	already have them.  Expanded some debug messages, and fixed
	others to display Ethernet addresses correctly.

	* config/sunndd-bpf.c: Removed an unnecessary comment.

Wed Jan 31 17:35:50 2001  Matthew Fredette  <fredette@alum.mit.edu>

	* Makefile.am: Added the ChangeLog to EXTRA_DIST.
	* README: Updated.
	* sunndd.c (main): Fixed various printf argument lists.

Wed Jan 31 17:35:16 2001  Matthew Fredette  <fredette@alum.mit.edu>

	* Release 0.1 out.
	* Makefile.am: Added the ChangeLog to EXTRA_DIST.
	* README: Updated.
	* sunndd.c (main): Fixed various printf argument lists.
	* sunndd.h: Now include param.h.

Tue Jan 30 15:35:38 2001  Matthew Fredette  <fredette@alum.mit.edu>

	* README: Added.
	* sunndd.c: Now, sunndd assembles disk images for clients on-the-fly.
	Defined many new macros related to this.
	(main): Added support for the --boot2 option.  Turned the
	original disk-image filename into the filename of the
	first-stage boot program.  Now do better multiple-client
	support, especially when it comes to checking if a client
	is really ours.  Now assemble client-specific disk images
	on-the-fly, potentially serving each client a different
	second-stage boot.

Mon Jan 29 15:12:13 2001  Matthew Fredette  <fredette@alum.mit.edu>

	* COPYING: Added.