@@ -1,3 +1,4 @@
+.\"	$NetBSD: sunndd.8,v 1.2 2001/05/17 20:42:08 fredette Exp $
 .\"	<<Id: sunndd.8,v 1.2 2001/05/15 14:42:25 fredette Exp >>
 .\"
 .\" Copyright (c) 2001 Matthew Fredette.  All rights reserved.
